Fix viewport height not displaying whole site on mobile

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -93,6 +93,11 @@
   }
 }
 
+html,
+body {
+  height: 100%;
+}
+
 html {
   overflow-y: hidden;
 }
@@ -101,10 +106,11 @@ body {
   position: relative;
   overflow: hidden;
   font-family: "Nunito", sans-serif;
+  min-height: -webkit-fill-available;
 }
 
 .logo {
-  height: 20vh;
+  height: 20%;
   width: 100vw;
   display: flex;
   justify-content: center;
@@ -119,7 +125,7 @@ body {
   justify-content: center;
   width: 100vw;
   position: relative;
-  height: 55vh;
+  height: 55%;
   cursor: pointer;
 
   &__form {
@@ -199,10 +205,10 @@ body {
 
 .footer {
   width: 100vw;
-  height: 25vh;
+  height: 25%;
   position: relative;
   &__btn {
-    opacity: 0.7;
+    opacity: 0.55;
     transition: 0.5s all;
     z-index: 20;
     cursor: pointer;
